# ReversiBot

./: .gitignore  CMakeLists.txt  README.md  main.cpp
reversi/: PicCreater.cpp  PicCreater.h  ReversiGame.cpp  ReversiGame.h  ReversiServer.cpp  ReversiServer.h  ReversiTools.h  botconfig.cpp  botconfig.h  reversiMap.cpp  reversiMap.h
